# texgit_py

./: .buildinfo  CONTRIBUTING.md  CONTRIBUTING_md.html  Makefile  README.html  README.md  SECURITY.md  SECURITY_md.html  genindex.html  index.html  make.sh  make_sh.html  make_venv.sh  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements-dev_txt.html  requirements.txt  requirements_txt.html  search.html  searchindex.js  setup.cfg  setup.py  setup_cfg.html  setup_py.html  texgit.formatters.html  texgit.html  texgit.repository.html
.doctrees/: README.doctree  environment.pickle  index.doctree  modules.doctree  texgit.doctree  texgit.formatters.doctree  texgit.repository.doctree
.github/workflows/: build.yaml  build.yml  release.yml
_modules/: index.html
_modules/texgit/: run.html
_modules/texgit/formatters/: python.html  source_tools.html
_modules/texgit/repository/: file_manager.html  fix_path.html  git.html  git_manager.html  process_manager.html
_sources/: README.md.txt  index.rst.txt  modules.rst.txt  texgit.formatters.rst.txt  texgit.repository.rst.txt  texgit.rst.txt
_static/: bizstyle.js
docs/source/: conf.py  index.rst
latexgit/: __init__.py  aux.py  version.py
latexgit/formatters/: format_python.py  python.py  source_tools.py
latexgit/repository/: __init__.py  file_manager.py  fix_path.py  git.py  git_manager.py  gitmanager.py  process_manager.py  processed.py
latexgit/utils/: __init__.py  help.py  path.py  shell.py  strings.py  temp.py  types.py
tc/: class_index.html  function_index.html  index.html  status.json  z_3b1990fdecdd0f61___init___py.html  z_3b1990fdecdd0f61_file_manager_py.html  z_3b1990fdecdd0f61_fix_path_py.html  z_3b1990fdecdd0f61_git_manager_py.html  z_3b1990fdecdd0f61_git_py.html  z_3b1990fdecdd0f61_process_manager_py.html  z_51ca6ee12d55988b___init___py.html  z_51ca6ee12d55988b_run_py.html  z_51ca6ee12d55988b_version_py.html  z_610974e4f1175a73___init___py.html  z_610974e4f1175a73_python_py.html  z_610974e4f1175a73_source_tools_py.html
tests/: test_aux.py  test_aux_1.py  test_aux_2.py  test_links_in_documentation.py  test_run_1.py  test_run_2.py
tests/formatters/: test_python.py
tests/repository/: test_file_manager.py  test_git_manager.py  test_process_manager.py  test_processed.py  test_processed_gen.py  test_processed_gen_git.py  test_processed_git.py  test_processed_replace_base_path.py
tests/utils/: test_path.py  test_temp.py
texgit/: __init__.py  run.py  version.py
texgit/formatters/: __init__.py  python.py  source_tools.py
texgit/repository/: __init__.py  file_manager.py  fix_path.py  git_manager.py  process_manager.py
