[metadata]
name = texgit
version = attr: texgit.version.__version__
description = A package for metaheuristic optimization in Python.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    LaTeX
    git
license = GPL 3.0
license_files = file: LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
url = https://thomasweise.github.io/texgit_py
author = Thomas Weise
author_email = tweise@ustc.edu.cn
maintainer = Thomas Weise
maintainer_email = tweise@ustc.edu.cn
project_urls =
    Documentation = https://thomasweise.github.io/texgit_py
    Source = https://github.com/thomasWeise/texgit_py/
    Tracker = https://github.com/thomasWeise/texgit_py/issues

[options]
include_package_data = True
install_requires =
    pycommons >= 0.8.69
    strip-hints >= 0.1.13
    yapf >= 0.43.0
packages = find:
python_requires = >= 3.12
zip_safe = False

[options.package_data]
texgit = py.typed

[options.packages.find]
exclude =
    .coverage*
    .github*
    .mypy_cache*
    .pytest_cache*
    .ruff_cache*
    dist*
    docs*
    examples*
    texgit.egg-info*
    tests*
